--- a/riscv-pk/dts/nemu.dtsi
+++ b/riscv-pk/dts/nemu.dtsi
@@ -4,7 +4,7 @@
 	L18: soc {
 		L2: clint@2000000 {
 			compatible = "riscv,clint0";
-			interrupts-extended = <&L4 3 &L4 7 &L5 3 &L5 7>;
+			interrupts-extended = <&L4 3 &L4 7>;
 			reg = <0x0 0xa2000000 0x0 0x10000>;
 			reg-names = "control";
       clock-frequency-mhz = <500>;
@@ -16,10 +16,10 @@
 			reg = <0x0 0xa10003f8 0x0 0x1000>;
 			reg-names = "control";
 		};
-		sdhci: mmc {
-      			compatible = "nemu-sdhost";
+    sdhci: mmc {
+      compatible = "nemu-sdhost";
 			reg = <0x0 0xa3000000 0x0 0x1000>;
-    		};
+    };
 	};
   chosen {
     //bootargs = "console=/dev/hvc0 root=/dev/mmcblk0 rootfstype=ext4 ro rootwait earlycon=sbi"; // for linux 5.0
