--- a/riscv-pk/dts/noop.dtsi
+++ b/riscv-pk/dts/noop.dtsi
@@ -1,105 +1,31 @@
 /dts-v1/;
 
 / {
-    L18: soc {
-        L2: clint@38000000 {
-            compatible = "riscv,clint0";
-            interrupts-extended = <&L4 3 &L4 7 &L5 3 &L5 7>;
-            reg = <0x0 0x38000000 0x0 0x10000>;
-            //reg = <0x0 0x2000000 0x0 0x10000>;
-            reg-names = "control";
-            clock-frequency-mhz = <25>;
-        };
-        /*
-        L14: serial@60000000 {
-            compatible = "xilinx,uartlite";
-            //interrupt-parent = <&L1>;
-            interrupts = <3>;
-            reg = <0x0 0x60000000 0x0 0x1000>;
-            reg-names = "control";
-        };
-        */
-
-        /*
-        sdhci: mmc {
-            compatible = "nemu-sdhost";
-            reg = <0x0 0x40002000 0x0 0x1000>;
-        };
-        */
-
-
-        clkc: misc_clk_0 {
-            #clock-cells = <0>;
-            clock-frequency = <25000000>;
-            compatible = "fixed-clock";
-        };
-
-        ethernet1: ethernet@31010000 {
-            compatible = "st,stm32-dwmac", "snps,dwmac-3.50a";
-            reg = <0 0x31010000 0 0x10000>;
-            reg-names = "stmmaceth";
-            interrupt-parent = <&PLIC>;
-            interrupts = <3 2 1>;
-            interrupt-names = "eth_lpi", "macirq", "eth_wake_irq";
-            clock-names = "stmmaceth";
-            clocks = <&clkc>;
-            //st,syscon = <&syscfg 0x4>;
-            snps,pbl = <2>;
-            snps,mixed-burst;
-            phy-mode = "rgmii";
-            // stmmac driver can not find phy if add this node
-            /*
-            phyaddr = <0x7>;
-            phy-handle = <&phy>;
-            mdio {
-                #address-cells = <0x1>;
-                #size-cells = <0x0>;
-                phyaddr = <0x7>;
-                compatible = "snps,dwmac-mdio";
-                phy: phy@7 {
-                    phyaddr = <0x7>;
-                    compatible = "marvell,88e1116r";
-                    device_type = "ethernet-phy";
-                    reg = <0x7>;
-                };
-            };
-            */
-        };
-
-        sdhci2: sdhci@30050000 {
-            compatible = "snps,dwcmshc-sdhci";
-            reg = <0 0x30050000 0 0x10000>;
-            interrupt-parent = <&PLIC>;
-            interrupts = <4>;
-            clocks = <&clkc>;
-            clock-names = "core";
-            sd-uhs-sdr12;
-            disable-wp;
-            bus-width = <4>;
-        };
-
-        EXTINTR: external-interrupts {
-            interrupt-parent = <&PLIC>;
-            interrupts = <1 2 3 4 5>;
-        };
-        PLIC: interrupt-controller@3c000000 {
-            #interrupt-cells = <1>;
-            compatible = "riscv,plic0";
-            interrupt-controller;
-            interrupts-extended = <&L4 9 &L4 11 &L5 9 &L5 11>;
-            reg = <0 0x3c000000 0 0x4000000>;
-            reg-names = "control";
-            riscv,max-priority = <7>;
-            riscv,ndev = <5>;
-        };
+	L18: soc {
+		L2: clint@2000000 {
+			compatible = "riscv,clint0";
+			interrupts-extended = <&L4 3 &L4 7>;
+			reg = <0x0 0x38000000 0x0 0x10000>;
+			reg-names = "control";
+			clock-frequency-mhz = <500>;
+		};
+		L14: serial@60000000 {
+			compatible = "xilinx,uartlite";
+			//interrupt-parent = <&L1>;
+			interrupts = <3>;
+			reg = <0x0 0x40600000 0x0 0x1000>;
+			reg-names = "control";
+		};
+    sdhci: mmc {
+      compatible = "nemu-sdhost";
+			reg = <0x0 0x40002000 0x0 0x1000>;
     };
-
-    chosen {
-        bootargs = "root=/dev/mmcblk0p1 rootfstype=ext4 rw rootwait earlycon noinitrd";
-    };
-
-    L11: memory@100000000 {
-        device_type = "memory";
-        reg = <0x0 0x80000000 0x0 0x80000000>;
-    };
+	};
+  chosen {
+    bootargs = "root=/dev/mmcblk0 rootfstype=ext4 ro rootwait earlycon";
+  };
+	L11: memory@100000000 {
+		device_type = "memory";
+		reg = <0x0 0x80000000 0x0 0x20000000>;
+	};
 };
