--- a/riscv-pk/Makefile
+++ b/riscv-pk/Makefile
@@ -41,11 +41,9 @@ CFLAGS += -g
 # Linux variables
 #--------------------------------------------------------------------
 
-LINUX_REPO_PATH = /home/wanghan/Workspace/DASICS_ICT/ucas-os-dasics/ucas-os
+LINUX_REPO_PATH = $(abspath ../ucas-os)
 LINUX_ELF = $(LINUX_REPO_PATH)/build/kernel
 
-# ROOTFS_PATH = $(abspath ../riscv-rootfs)
-# RFS_ENV = RISCV_ROOTFS_HOME=$(ROOTFS_PATH)
 
 #--------------------------------------------------------------------
 # BBL rules
@@ -79,24 +77,12 @@ bbl-clean:
 # Linux rules
 #--------------------------------------------------------------------
 
-# $(LINUX_REPO_PATH):
-# 	mkdir -p $@
-# 	@/bin/echo -e "\033[1;31mBy default, a shallow clone with only 1 commit history is performed, since the commit history is very large.\nThis is enough for building the project.\nTo fetch full history, run 'git fetch --unshallow' under $(LINUX_REPO_PATH).\033[0m"
-# 	git clone --depth 1 -b noop https://github.com/LvNA-system/riscv-linux.git $@
-# 	$(RFS_ENV) $(MAKE) -C $@ ARCH=riscv emu_defconfig
-
-# $(ROOTFS_PATH):
-# 	mkdir -p $@
-# 	git clone https://github.com/LvNA-system/riscv-rootfs.git $@
-
 linux: $(LINUX_ELF)
 
-$(LINUX_ELF): #| $(LINUX_REPO_PATH) $(ROOTFS_PATH)
-# $(RFS_ENV) $(MAKE) -C $(ROOTFS_PATH)
-# $(RFS_ENV) $(MAKE) -C $(@D) CROSS_COMPILE=riscv64-unknown-linux-gnu- ARCH=riscv vmlinux
+$(LINUX_ELF): $(LINUX_REPO_PATH)
 	$(MAKE) -C  $(LINUX_REPO_PATH)
 	mkdir -p $(BBL_BUILD_PATH)
-# $(RISCV_DUMP) -d $(LINUX_ELF) > $(BBL_BUILD_PATH)/vmlinux.txt
+	$(RISCV_DUMP) -d $(LINUX_ELF) > $(BBL_BUILD_PATH)/kernel.txt
 
 linux-clean:
 	-rm $(LINUX_ELF)
